--- a/voltgo/producto/templates/detalle.html
+++ b/voltgo/producto/templates/detalle.html
@@ -12,9 +12,17 @@
           <h1 class="card-title display-4">Tecnología de {{ object.empresa }}</h1>
           <h2 class="h3">{{ object.nombre }}</h2>
           <p class="lead">{{ object.precio_base }} €/hora</p>
-          <a href="{% url 'agregar-al-carrito' pk=object.pk %}" class="btn btn-primary">
-            Reservar
-          </a>
+          <p class="lead">Stock: {{ object.stock }} uds.</p>
+          <form method="post" action="{% url 'agregar-al-carrito' pk=object.pk %}">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="cantidad" class="form-label">Cantidad:</label>
+              <input type="number" name="cantidad" id="cantidad" class="form-control" min="1" max="{{ object.stock }}" value="1">
+            </div>
+            <button type="submit" class="btn btn-primary">
+              Reservar
+            </button>
+          </form>
         </div>
       </div>
     </div>
